# This file documents the revision history for Perl extension Catalyst.

5.80008 2009-08-21 17:47:30

  Bug fixes:
       - Fix replace_constructor warning to actually work if you make your
         application class immutable without that option.
       - Depend on Module::Pluggable 3.9 to prevent a bug wherein components
         in inner packages might not be registered. This especially affected
         tests.
       - Catalyst::Engine::FastCGI - relax the check for versions of Microsoft
         IIS. Provides compatibility with Windows 2008 R2 as well as
         (hopefully) future versions.
       - In tests which depend on the values of environment variables,
         localise the environment, then delete only relevant environment
         variables (RT#48555)
       - Fix issue with Engine::HTTP not sending headers properly in some cases
         (RT#48623)
       - Make Catalyst::Engine write at least once when finalizing the response
         body from a filehandle, even if the write is empty. This avoids fail
         when trying to send out an empty response body from a filehandle.
       - Catalyst::Engine::HTTP - Accept a fully qualified absolute URI in the
         Request-URI of the Request-Line

  Refactoring / cleanups:
       - Deleted the Restarter engine and its Watcher code. Use the
         new Catalyst::Restarter in a recent Catalyst::Devel instead.
       - New unit test for Catalyst::Action 'unit_core_action.t'
       - Bump minimum supported perl version from 5.8.1 to 5.8.6 as there are
         known issues with 5.8.3, and nobody is prepared to fix / support perl
         older than 5.8.6 any more. Patches to regain compatibility to older
         perls would be welcome.
       - Debug output uses dynamic column sizing to create more readable output
         when using a larger $ENV{COLUMNS} setting. (groditi)

  New features:
       - Added private_path method for Catalyst::Action